# datafusion-ballista

./: .asf.yaml  .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE.txt  README.md  ROADMAP.md  clippy.toml  docker-compose.quick.yml  docker-compose.yml  genindex.html  index.html  objects.inv  pyproject.toml  rustfmt.toml  search.html  searchindex.js
ballista-cli/: Cargo.toml  Dockerfile  README.md  Trunk.toml  ballista-web-tui.html  index.html
ballista-cli/src/: command.rs  context.rs  exec.rs  lib.rs  logging.rs  main.rs  wasm.rs
ballista-cli/src/tui/: app.rs  domain.rs  error.rs  event.rs  http_client.rs  mod.rs  terminal.rs  tui.rs
ballista-cli/src/tui/ui/: mod.rs  (+9 more)
ballista-python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  requirements-37.txt
ballista-python/ballista/tests/: test_functions.py  test_indexing.py  test_sql.py
ballista-python/dev/: create_license.py
ballista-python/src/: errors.rs  functions.rs  lib.rs
ballista-tui/: Cargo.toml  README.md  issue.md
ballista-tui/etc/config/: default.yaml
ballista-tui/src/: app.rs  domain.rs  error.rs  event.rs  http_client.rs  logging.rs  main.rs
ballista-tui/src/infrastructure/: config.rs  mod.rs
ballista-tui/src/ui/: header.rs  mod.rs
ballista/client/: Cargo.toml  README.md
ballista/client/src/: columnar_batch.rs  context.rs  extension.rs  lib.rs  prelude.rs
ballista/client/testdata/: alltypes_plain.arrow  part-0.parquet
ballista/client/tests/: bugs.rs  checkpoint.rs  client_side_cleanup.rs  context_basic.rs  context_checks.rs  context_setup.rs  context_standalone.rs  context_unsupported.rs  multi_file_scan.rs  object_store.rs  physical_plan_submission.rs  remote.rs  setup.rs  sort_shuffle.rs  standalone.rs
ballista/core/: Cargo.toml  build.rs
ballista/core/proto/: ballista.proto  datafusion.proto  datafusion_common.proto
ballista/core/src/: client.rs  client_pool.rs  config.rs  diagram.rs  error.rs  event_loop.rs  extension.rs  ids.rs  lib.rs  object_store.rs  partitioning.rs  planner.rs  registry.rs  scheduler_client.rs  utils.rs
ballista/executor/: Cargo.toml  build.rs  executor_config_spec.toml
ballista/executor/src/: client_pool.rs  collect.rs  config.rs  cpu_bound_executor.rs  execution_engine.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  health.rs  lib.rs  main.rs  memory_pool.rs  runtime_cache.rs  scheduler_client_registry.rs  shutdown.rs  standalone.rs  terminate.rs
ballista/executor/tests/: oom_guard_alloc.rs
ballista/history/: Cargo.toml
ballista/history/src/: dto.rs  event.rs  lib.rs  reader.rs  writer.rs
ballista/riffle/: Cargo.toml  build.rs
ballista/riffle/docker/: Dockerfile  coordinator.conf  entrypoint.sh  riffle.toml
ballista/riffle/proto/: uniffle.proto
ballista/riffle/src/: client.rs  config.rs  error.rs  lib.rs  serde.rs
ballista/riffle/tests/: integration_test.rs
ballista/rust/core/: Cargo.toml  build.rs
ballista/rust/executor/: Cargo.toml  executor_config_spec.toml
ballista/rust/scheduler/: Cargo.toml  scheduler_config_spec.toml
ballista/scheduler/: Cargo.toml  build.rs  scheduler_config_spec.toml
ballista/scheduler/benches/: scheduler_events.rs
ballista/scheduler/proto/: keda.proto
ballista/scheduler/src/: config.rs  display.rs  flight_proxy_service.rs  flight_sql.rs  lib.rs  main.rs  planner.rs  riffle_lifecycle.rs  scheduler_process.rs  standalone.rs  test_utils.rs
ballista/scheduler/ui/: README.md  package-lock.json  package.json
ballista/tests/: Cargo.toml  build.rs  protodep.toml
ballista/tests/proto/: logical_plan.proto  physical_plan.proto
ballista/tests/src/: lib.rs  proto.rs  test_logical_codec.rs  test_physical_codec.rs  test_table.rs  test_table_exec.rs  tpch.rs
benchmarks/: .gitignore  Cargo.toml  README.md  docker-compose.yaml  generate-comparison.py  run.sh  test_generate_comparison.py  tpcds-gen.sh  tpch-gen.sh  tpch.py
benchmarks/benches/: sort_shuffle.rs
benchmarks/db-benchmark/: README.md
benchmarks/queries/: q1.sql  q18.sql  q2.sql  q21.sql  q3.sql
benchmarks/results/: ballista-54.0.0-rc2-sf100.json  spark-3.5.3-sf100.json
benchmarks/spark/: README.md  pom.xml
benchmarks/src/: lib.rs
benchmarks/tests/: tpch_distributed.rs
benchmarks/tpcds/: generate_data.sh
chaos-testing/: Cargo.toml  README.md
chaos-testing/src/: budget.rs  cluster.rs  fixture.rs  lib.rs  registry.rs  udf.rs
chaos-testing/tests/: ha.rs
chaos-testing/tests/common/: mod.rs
datafusion/: Cargo.toml
datafusion/src/: lib.rs
examples/: Cargo.toml  README.md
examples/examples/: custom-client.rs  custom-executor.rs  custom-scheduler.rs  mtls-cluster.rs  remote-dataframe.rs  remote-spark-functions.rs  remote-sql.rs  standalone-broadcast-join.rs  standalone-sql.rs  standalone-substrait.rs
examples/src/: lib.rs  object_store.rs  test_util.rs
examples/tests/: object_store.rs
examples/tests/common/: mod.rs
kapot-cli/: Cargo.toml  Dockerfile  README.md
kapot-cli/src/: command.rs  exec.rs  lib.rs  main.rs
kapot/client/: Cargo.toml  README.md
kapot/client/src/: columnar_batch.rs  context.rs  prelude.rs
python/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  example.py  pyproject.toml  requirements-310.txt  requirements-37.txt  requirements-dev.txt  requirements.in  requirements.txt
python/ballista/: __init__.py  context.py
python/examples/: ballista_execution.py  client_remote.py  client_standalone.py  ctx.py  dataframe_api.ipynb  distributed_queries.ipynb  example.py  executor.py  experiment.py  getting_started.ipynb  new_interface.py  readme.py  readme_remote.py  readme_standalone.py  remote.py  scheduler.py  standalone.py  substrait.py
python/pyballista/: __init__.py  context.py
python/src/: ballista_context.rs  catalog.rs  cluster.rs  codec.rs  config.rs  context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  datatype.rs  errors.rs  expression.rs  functions.rs  lib.rs  pyarrow_filter_expression.rs  query_planner.rs  udaf.rs  udf.rs  utils.rs
python/testdata/: test.csv
(+725 files in other folders)
