# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
exclude = ["dev/msrvcheck", "python"]
members = ["ballista-cli", "ballista/client", "ballista/core", "ballista/executor", "ballista/scheduler", "benchmarks", "examples"]
resolver = "3"

[workspace.package]
edition = "2024"
# we should try to follow datafusion version 
rust-version = "1.88.0"

[workspace.dependencies]
arrow = { version = "58.3", features = ["ipc_compression"] }
arrow-flight = { version = "58.3", features = ["flight-sql-experimental"] }
clap = { version = "4.5", features = ["derive", "cargo"] }

datafusion = "54"
datafusion-cli = "54"
datafusion-proto = "54"
datafusion-proto-common = "54"
datafusion-spark = "54"
datafusion-substrait = "54"

insta = "1.47"
itertools = "0.15"
object_store = "0.13.2"
prost = "0.14"
prost-types = "0.14"
rstest = { version = "0.26" }
tonic = { version = "0.14" }
tonic-build = { version = "0.14", default-features = false, features = [
    "transport",
] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tracing = "0.1"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctor = { version = "1.0" }
mimalloc = { version = "0.1" }

tokio = { version = "1" }
uuid = { version = "1.23", features = ["v4", "v7"] }
rand = { version = "0.10" }
env_logger = { version = "0.11" }
futures = { version = "0.3" }
log = { version = "0.4" }
parking_lot = { version = "0.12" }
tempfile = { version = "3.27" }
dashmap = { version = "6.2" }
async-trait = { version = "0.1" }
serde = { version = "1.0" }
tokio-stream = { version = "0.1" }
url = { version = "2.5" }

# cargo build --profile release-lto
[profile.release-lto]
codegen-units = 1
inherits = "release"
lto = true

# the release profile takes a long time to build so we can use this profile during development to save time
# cargo build --profile release-nonlto
[profile.release-nonlto]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[profile.ci]
inherits = "dev"
incremental = false
debug = false
debug-assertions = false
strip = "debuginfo"

# ci turns off debug info, etc. for dependencies to allow for smaller binaries making caching more effective
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false

# Build profile for the TPC-H integration CI job. That job only checks that the
# distributed suite runs correctly (no timing gate), so it trades some runtime
# speed for much faster compilation: opt-level 1 keeps queries fast enough while
# compiling dependencies far quicker than the opt-level 3 release profiles. Do
# not use this for performance numbers — use release-nonlto / release-lto.
[profile.tpch-ci]
inherits = "release"
opt-level = 1
codegen-units = 256
lto = false
debug = false
debug-assertions = false
incremental = false

# Temporarily pin DataFusion to the tip of `branch-54` to pick up the
# logical JoinNode proto round-trip fix (apache/datafusion#22785, backport of
# #22104), which is on branch-54 but not in the released 54.0.0 tag.
# Remove once a 54.x patch release containing it is published.
[patch.crates-io]
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-catalog = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-catalog-listing = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-cli = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-common-runtime = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource-arrow = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource-avro = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource-csv = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource-json = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-datasource-parquet = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-doc = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-execution = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-expr = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-expr-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-aggregate = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-aggregate-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-nested = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-table = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-window = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-functions-window-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-macros = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-optimizer = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-physical-expr = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-physical-expr-adapter = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-physical-expr-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-physical-optimizer = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-physical-plan = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-proto = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-proto-common = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-pruning = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-session = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-spark = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-sql = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
datafusion-substrait = { git = "https://github.com/apache/datafusion.git", rev = "2142d5b2a737fa01836906d2526265035964ac99" }
