# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-cli"
description = "Command Line Client for Ballista distributed query engine."
version = "52.0.0"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
edition = { workspace = true }
rust-version = { workspace = true }
keywords = ["ballista", "cli"]
license = "Apache-2.0"
homepage = "https://datafusion.apache.org/ballista/"
repository = "https://github.com/apache/datafusion-ballista"
readme = "README.md"

[dependencies]
ballista = { path = "../ballista/client", version = "52.0.0", features = ["standalone"] }
clap = { workspace = true, features = ["derive", "cargo"] }
datafusion = { workspace = true }
datafusion-cli = { workspace = true }
dirs = "6.0"
env_logger = { workspace = true }
mimalloc = { workspace = true }
rustyline = "17.0.1"
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }

[features]

