[package]
name = "ballista-tui"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }

[workspace]
