[package]
name = "ballista-tui"
version = "0.0.1"
edition = "2024"

[dependencies]
bon = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
color-eyre = "0.6.5"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
ratatui = "0.30.0"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[workspace]
