# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-benchmarks"
description = "Ballista Benchmarks"
version = "51.0.0"
edition = "2024"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
homepage = "https://datafusion.apache.org/ballista/"
repository = "https://github.com/apache/datafusion-ballista"
license = "Apache-2.0"
publish = false

[features]
ci = []
default = ["mimalloc"]
snmalloc = ["snmalloc-rs"]

[dependencies]
ballista = { path = "../ballista/client", version = "51.0.0" }
ballista-core = { path = "../ballista/core", version = "51.0.0" }
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
mimalloc = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.78"
snmalloc-rs = { version = "0.3", optional = true }
structopt = { version = "0.3", default-features = false }
tempfile = { workspace = true }
tokio = { version = "^1.44", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "parking_lot",
] }

[dev-dependencies]
