# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-chaos"
description = "Fault-injection harness for testing Ballista high availability"
license = "Apache-2.0"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[dependencies]
ballista = { path = "../ballista/client" }
ballista-core = { path = "../ballista/core" }
ballista-executor = { path = "../ballista/executor" }
ballista-scheduler = { path = "../ballista/scheduler" }
arrow = { workspace = true }
datafusion = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1.0"
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "sync", "time"] }

[dev-dependencies]
rstest = { workspace = true }

[lib]
name = "chaos_testing"
path = "src/lib.rs"

[[bin]]
name = "chaos-executor"
path = "src/bin/chaos-executor.rs"

[[bin]]
name = "chaos-scheduler"
path = "src/bin/chaos-scheduler.rs"
