[package]
name = "datafusion"
version = "0.1.0"
edition = "2021"

[features]
force_hash_collisions = ["upstream/force_hash_collisions"]
simd = ["upstream/simd"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion-proto = { git = "https://github.com/coralogix/arrow-datafusion", branch = "arrow23" }
upstream = { git = "https://github.com/coralogix/arrow-datafusion", branch = "arrow23", package = "datafusion" }
