# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "ballista-examples"
description = "Ballista usage examples"
version = "51.0.0"
homepage = "https://datafusion.apache.org/ballista/"
repository = "https://github.com/apache/datafusion-ballista"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
license = "Apache-2.0"
keywords = ["arrow", "distributed", "query", "sql"]
edition = { workspace = true }
rust-version = { workspace = true }
publish = false

[[example]]
name = "standalone_sql"
path = "examples/standalone-sql.rs"
required-features = ["ballista/standalone"]

[[example]]
name = "standalone_substrait"
path = "examples/standalone-substrait.rs"
required-features = ["ballista/standalone"]

[dependencies]

[dev-dependencies]
ballista = { path = "../ballista/client", version = "51.0.0" }
ballista-core = { path = "../ballista/core", version = "51.0.0", default-features = false }
ballista-executor = { path = "../ballista/executor", version = "51.0.0", default-features = false }
ballista-scheduler = { path = "../ballista/scheduler", version = "51.0.0", default-features = false }
ctor = { workspace = true }
datafusion = { workspace = true }
duckdb = { version = "=1.3.0", features = ["bundled"] }
env_logger = { workspace = true }
log = { workspace = true }
object_store = { workspace = true, features = ["aws"] }
testcontainers-modules = { version = "0.13", features = ["minio"] }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "parking_lot"
] }
tonic = { workspace = true }
url = { workspace = true }
uuid = { workspace = true}

[features]
default = []
testcontainers = []
