# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kapot-cli"
description = "Command Line Client for Kapôt distributed query engine."
version = "0.12.0"
authors = ["André Claudino <claudino@d2x.com.br>"]
edition = "2021"
keywords = ["kapot", "cli"]
license = "Apache-2.0"
homepage = "https://github.com/apache/arrow-kapot"
repository = "https://github.com/apache/arrow-kapot"
rust-version = "1.72"
readme = "README.md"

[dependencies]
kapot = { path = "../kapot/client", version = "0.12.0", features = ["standalone"] }
clap = { workspace = true }
datafusion = { workspace = true }
datafusion-cli = { workspace = true }
rustyline = { workspace = true }
env_logger = { workspace = true }

dirs = "5.0.1"
 
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.13.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "sync", "parking_lot"] }

[features]
s3 = ["kapot/s3"]
